# flower_embedded

./: .gitignore  README.md  clientapp.Dockerfile  compose.yaml  config.yaml  generate_dataset.py  pyproject.toml  serverapp.Dockerfile  utils.py
docker-swarm/: compose.yaml
docker-swarm-multifunction/: compose.yaml  pyproject.toml
docker-swarm-multifunction-config/: .gitignore  README.md  compose.yaml  generate_dataset.py  pyproject.toml
docker-swarm-multifunction-config/config/: config.yaml
docker-swarm-multifunction-config/src/flower_multifunction/: __init__.py  client_app.py  server_app.py  task.py
docker-swarm-multifunction-config/src/flower_multifunction/client/: flower_client_train.py
docker-swarm-multifunction-config/src/flower_multifunction/strategy/: aggregate_calculated_statistics.py
docker-swarm-multifunction/quickstart_multifunction/: __init__.py
docker-swarm-multifunction/quickstart_multifunction/strategy/: __init__.py
docker-swarm-statistic-analysis/: compose.yaml  pyproject.toml
docker-swarm/quickstart_docker/: __init__.py  client_app.py  server_app.py  task.py
local-docker/: pyproject.toml
local-docker-multifunction/: README.md  clientapp.Dockerfile  pyproject.toml
local-docker-multifunction-config/: clientapp.Dockerfile  compose.yaml  config.yaml  pyproject.toml  serverapp.Dockerfile  test.ipynb
local-docker-multifunction-config/config/: config.yaml
local-docker-multifunction-config/src/: __init__.py
local-docker-multifunction-config/src/flower_multifunction/: __init__.py  client_app.py  server_app.py  task.py
local-docker-multifunction-config/src/flower_multifunction/client/: flower_client_statistic.py  flower_client_train.py
local-docker-multifunction-config/src/flower_multifunction/strategy/: aggregate_custom_metric_strategy.py
local-docker-multifunction/quickstart_multifunction/: task.py  utils.py
local-docker-multifunction/quickstart_multifunction/client/: flower_client_train.py
local-docker-multifunction/quickstart_multifunction/strategy/: aggregate_calculated_statistics.py
local-docker-sklearn/: README.md  pyproject.toml
local-docker-sklearn/docker_sklearn/: client_app.py  server_app.py  task.py
local-docker-sklearn/local-docker-sklearn/: .gitignore  compose.yaml  generate_dataset.py  pyproject.toml  test.ipynb
local-docker-sklearn/local-docker-sklearn/config/: config.yaml
local-docker/quickstart_docker/: task.py
pandas_example/: client_app.py  server_app.py
quickstart_multifunction/: __init__.py  client_app.py  server_app.py  task.py  utils.py
quickstart_multifunction/client/: __init__.py  flower_client_statistic.py
quickstart_multifunction/strategy/: aggregate_custom_metric_strategy.py
