[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas_example"
version = "1.0.0"
description = "Federated Learning with Pandas and Flower (Quickstart Example)"
license = "Apache-2.0"
authors = [
    { name = "The Flower Authors", email = "hello@flower.ai" },
    { name = "Ragy Haddad", email = "ragy202@gmail.com" },
]
dependencies = [
    "flwr[simulation]>=1.14.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "quickstart_multifunction.server_app:app"
clientapp = "quickstart_multifunction.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-sample = 1.0
fl_use_case = "statistical" # "train"
local-epochs = 3
batch-size = 2
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
