[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local_docker_multifunction"
version = "1.0.0"
description = "Federated Learning with flower with multifunction local in docker"
license = "Apache-2.0"
authors = [
]
dependencies = [
    "flwr[simulation]>=1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "numpy<2",  # Downgrade NumPy to 1.x
    "pandas==2.2.3",
    "tensorflow>=2.11.1,<2.18.0",
]


[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "quickstart_multifunction.server_app:app"
clientapp = "quickstart_multifunction.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-sample = 1.0
local-epochs = 1
batch-size = 4
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true