[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multifunction_analysisbackend"
version = "1.0.0"
description = "Federated Learning with flower with multifunction local in docker"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "numpy<2",  # Downgrade NumPy to 1.x
    "pandas==2.2.3",
    "tensorflow>=2.11.1,<2.18.0",
]


[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "src.flower_multifunction.server_app:app"
clientapp = "src.flower_multifunction.client_app:app"

[tool.flwr.app.config]
use-case = "train" # "statistic" # 
num-server-rounds = 2
fraction-sample = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true