[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas_example"
version = "1.0.0"
description = "Federated Learning with Pandas and Flower (Quickstart Example)"
license = "Apache-2.0"
authors = [
  {name = "Daniel Konegen", email = "Daniel.Konegen@hahn-schickard.de"},
]
dependencies = [
    "flwr[simulation]>=1.14.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pandas_example.server_app:app"
clientapp = "pandas_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-sample = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
