[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-sklearn"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn==1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dk100"

[tool.flwr.app.components]
serverapp = "docker_sklearn.server_app:app"
clientapp = "docker_sklearn.client_app:app"

[tool.flwr.app.config]
penalty = "l2"
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true