[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-docker"
version = "1.0.0"
description = ""
license = "Apache-2.0"
authors = [
  {name = "Daniel Konegen", email = "Daniel.Konegen@hahn-schickard.de"},
]
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "quickstart_docker.server_app:app"
clientapp = "quickstart_docker.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 32
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true